Release history for {{ $dist->name }}:

{{$NEXT}}
  [Enhancements]
  - Pod::Weaver::Section::Requirements changelog can be blank, so that it will use the same file from the NextRelease
    plugin.

  [Incompatabilities]
  - Pod::Weaver::Section::Requirements no longer guesses the prerequisites automatically. The added guess_prereqs option
    will enable this. This should only affect when it is not used with the UsefulReadme plugin. (Thanks @leont)

  [Documentation]
  - Pod::Weaver::Section::Requirements metafile notes how the attribute is used.

  - Updated Changes with explicit acknowledgements.

  [Other Changes]
  - When registering itself as a development prerequsite, it will use v0.4.3 (baseline features and bug fixes) rather
    than the current version.

  [Tests]
  - Add more tests.

  - Explicitly declared Pod::Weaver as a test prerequsite.

v0.4.3    2025-08-07 13:31:13+01:00 Europe/London
  [Bug Fixes]
  - Pod::Weaver::Section::Requirements also looks for `cpm.yml` and not `cpmfile` or `metafile`.

  - Pod::Weaver::Section::RecentChanges and Pod::Weaver::Section::Requirements check the all_modules setting.

  [Tests]
  - Add more author tests.

v0.4.2    2025-08-07 07:43:05+01:00 Europe/London
  [Enhancements]
  - Pod::Weaver::Section::Requirements also looks for `cpmfile` and `metafile` when no metafile is specified.

  [Bug Fixes]
  - Pod::Weaver::Section::InstallationInstructions consistently chooses Build.PL when that and Makefile.PL are
    both present. GH#9 (Thanks @leont)

  [Documentation]
  - Fixed wording in Changes.

  [Tests]
  - Fixed prerequisites for tests.

  - Moved author tests into the xt directory.

  - Add more author tests.

  [Toolchain]
  - Set up GitHub workflow for testing. (Thanks @atoomic)

  - Ensure local-lib is not included in distribution.

v0.4.1    2025-08-06 08:41:07+01:00 Europe/London
  [Tests]
  - Fixed prerequisites for tests.

v0.4.0    2025-08-05 17:11:19+01:00 Europe/London
  [Enhancements]